# red_ninjas

./: README.md
project/: CMakeLists.txt  cmake_clean.sh
project/check_kernel/: CMakeLists.txt  cuda_util.h  f3.pgm  haar.cu  main.cpp  nearestNeighbor.cuh  nearestNeighbor_kernel.cuh  small.pgm
project/device_info/: CMakeLists.txt  device_info.cu
project/facedetect/: 25_ks.pgm  640.stat  CMakeLists.txt  FullSizeRender_opt.pgm  base1-shmem.stat  base2-pinned.stat  base3-fastmath.stat  base4-womaxreg.stat  base5-diverge.stat  cuda_util.h  exec.sh  facedet.sh  gpu_nn_integral.cuh  gpu_nn_integral_kernel.cuh  gpu_transpose_kernel.cuh  group.pgm  haar.cu  haar.h  haar_stage.cuh  haar_stage_kernel.cuh  haar_stage_kernel_shmem.cuh  haar_stage_kernel_wo_shmem.cuh  image.h  main.cpp  many-faces.pgm
project/facedetect-bin/: facedetect-base1-shmem  facedetect-base2-pinned  facedetect-base3-fastmath  facedetect-base4-womaxreg  facedetect-base5-diverge
project/facedetect-bkp/: CMakeLists.txt  facedet.sh  gpu_nn_integral.cuh  gpu_nn_integral_kernel.cuh  haar.cu  haar_stage.cuh  new_kernel.stats  old_kernel.stats
project/fd_wtr_optim_extern/: CMakeLists.txt  Face.pgm  haar.cu  haar_stage.cuh  haar_stage_kernel.cuh  optim.cuh  rectangles.cpp  temp_log
project/integral_image/: 1024_stats  640_stats  CMakeLists.txt  cuda_util.h  facedet.sh  gpu_integral.cuh  gpu_integral_kernel.cuh  haar.cu  main.cpp
project/integral_image_optimized/: CMakeLists.txt  cuda_util.h  gpu_integral.cuh  gpu_integral_kernel.cuh  haar.cu  image.c  image.h
project/mat_transpose/: 1000_new.pgm  1024_mt_stats  640.pgm  640_mt_stats  CMakeLists.txt  cuda_util.h  gpu_integral.cuh  gpu_integral_kernel.cuh  gpu_transpose_kernel.cuh  haar.cu  main.cpp  main.cu
project/nearest_neighbor/: CMakeLists.txt  nearestNeighbor.cuh
project/nn_integral_image/: CMakeLists.txt  cuda_util.h  gpu_nn_integral.cuh  haar.cu  (+10 more)
(+128 files in other folders)
